--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,77 +1,35 @@
 version: 2.1
 
-commands:
-  shared_steps:
-    steps:
-      - checkout
+orbs:
+  node: circleci/node@4.7
 
-      # Restore Cached Dependencies
-      - restore_cache:
-          name: Restore bundle cache
-          key: administrate-{{ checksum "Gemfile.lock" }}
-
-      # Bundle install dependencies
-      - run: bundle install --path vendor/bundle
-
-      # Cache Dependencies
-      - save_cache:
-          name: Store bundle cache
-          key: administrate-{{ checksum "Gemfile.lock" }}
-          paths:
-            - vendor/bundle
-
-      # Wait for DB
-      - run: dockerize -wait tcp://localhost:5432 -timeout 1m
-
-      # Setup the environment
-      - run: cp .sample.env .env
-
-      # Setup the database
-      - run: bundle exec rake db:setup
-
-      # Run the tests
-      - run: bundle exec rake
-
-default_job: &default_job
-  working_directory: ~/administrate
-  steps:
-    - shared_steps
-    # Run the tests against multiple versions of Rails
-    - run: bundle exec appraisal install
-    - run: bundle exec appraisal rake
+executors:
+  linux: # a Linux VM running Ubuntu 20.04
+    machine:
+      image: ubuntu-2004:202107-02
 
 jobs:
-  ruby-25:
-    <<: *default_job
-    docker:
-      - image: circleci/ruby:2.5.0-node-browsers
-        environment:
-          PGHOST: localhost
-          PGUSER: administrate
-          RAILS_ENV: test
-      - image: postgres:10.1-alpine
-        environment:
-          POSTGRES_USER: administrate
-          POSTGRES_DB: ruby25
-          POSTGRES_PASSWORD: ""
-
-  ruby-26:
-    <<: *default_job
-    docker:
-      - image: circleci/ruby:2.6.3-node-browsers-legacy
-        environment:
-          PGHOST: localhost
-          PGUSER: administrate
-          RAILS_ENV: test
-      - image: postgres:10.1-alpine
-        environment:
-          POSTGRES_USER: administrate
-          POSTGRES_DB: ruby26
-          POSTGRES_PASSWORD: ""
+  test:
+    parameters:
+      os:
+        type: executor
+      node-version:
+        type: string
+    executor: linux
+    steps:
+      - checkout
+      - node/install:
+          node-version: << parameters.node-version >>
+          install-yarn: true
+      - run:
+          shell: bash
+          command: echo "matrix vaule :" << parameters.matrix-var >>
+          name: step1
 
 workflows:
-  version: 2
-  multiple-rubies:
+  all-tests:
     jobs:
-      - ruby-26
-      - ruby-25
+      - test:
+          matrix:
+            parameters:
+              matrix-var: ["python", "java"]
