--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
         type: executor
       matrix-var:
         type: string
-    executor: linux
+    executor: "linux"
     steps:
       - checkout
       - run:
