--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,10 @@ jobs:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: postgres
             POSTGRES_DB: postgres
-
+      steps:
+        - checkout
+        - run: echo "this is the build job"
+  
   job1:
     executor:
       name: linux
