--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
           name: "echo an env var that is part of our context"
           command: |
             echo $MY_ENV_VAR
+            echo ${MY_ENV_VAR}
             
   test:
     parameters:
