--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
         - run: echo "this is the build job"
   
   job1:
-    executor:
-      name: linux
+    docker:
+      - image: cimg/base:2020.01
     steps:
       - checkout
       - run:
